--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ pg_test = []
 anyhow = "1.0.100"
 crc32fast = "1.5.0"
 pgrx = "=0.16.1"
+zerocopy = { version = "0.8.31", features = ["derive", "simd", "std"] }
 
 [dev-dependencies]
 pgrx-tests = "=0.16.1"
