--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,12 @@ pg_test = []
 
 [dependencies]
 anyhow = "1.0.100"
+bitfield-rle = "0.2.1"
+bitpacking = "0.9.2"
 crc32fast = "1.5.0"
+delta-encoding = "0.4.10"
 pgrx = "=0.16.1"
+stream-vbyte = { version = "0.4.1", features = ["x86_ssse3", "x86_sse41"] }
 zerocopy = { version = "0.8.31", features = ["derive", "simd", "std"] }
 
 [dev-dependencies]
