--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ bitpacking = "0.9.2"
 crc32fast = "1.5.0"
 delta-encoding = "0.4.10"
 pgrx = "=0.16.1"
+roaring = "0.10.3"
 stream-vbyte = { version = "0.4.1", features = ["x86_ssse3", "x86_sse41"] }
 zerocopy = { version = "0.8.31", features = ["derive", "simd", "std"] }
 
