--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pg_zoekt"
-version = "0.0.0"
+version = "0.0.1"
 edition = "2024"
 
 [lib]
@@ -27,6 +27,7 @@ bitpacking = "0.9.2"
 crc32fast = "1.5.0"
 delta-encoding = "0.4.10"
 pgrx = "=0.16.1"
+regex = "1.11.2"
 roaring = "0.10.3"
 stream-vbyte = { version = "0.4.1", features = ["x86_ssse3", "x86_sse41"] }
 zerocopy = { version = "0.8.31", features = ["derive", "simd", "std"] }
